fluxcd/apps/overlays/production/xbackbone/statefulset-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: xbackbone
spec:
  replicas: 1
  template:
    metadata:
      labels:
        policy.prplanit.com/ingress: "true"
    spec:
      containers:
        - name: xbackbone
          image: docker.io/linuxserver/xbackbone:v3.8.8
  volumeClaimTemplates:
    - metadata:
        name: tingle-tuner-xbackbone-config
      spec:
        storageClassName: ceph-rbd-retain
