fluxcd/apps/overlays/production/xbackbone/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: xbackbone
  annotations:
    lbipam.cilium.io/ips: "172.22.30.107"
    lbipam.cilium.io/sharing-key: "tingle-tuner"
spec:
  type: LoadBalancer
