fluxcd/apps/overlays/production/xbackbone/httproute-xylem.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: xbackbone-xylem
  annotations:
    gatus.home-operations.com/endpoint: |
      group: "Tools & Utilities (Tingle Tuner🔧)"
spec:
  parentRefs:
    - name: phloem-gateway
      namespace: arylls-lookout
  hostnames:
    - "xbackbone.pcfae.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: xbackbone
          port: 80
